# IDP_M205

./: .gitignore  .vimrc  CMakeLists.txt  Makefile  project.geany
src/: #MotionControl.h#  #light_sensor.h#  #sensor_base.h#  .robot.cpp.swp  ErrorLog.cpp  ErrorLog.h  Makefile  MotionControl.cpp  MotionControl.h  actuator.cpp  actuator.h  distance_sensor.cpp  distance_sensor.h  global  global.cpp  global.h  led.cpp  led.h  light_sensor.cpp  light_sensor.h  main  main.arm  main.cpp  motor.cpp  motor.h  project.geany  robot.cpp  robot.h  sensor_base.cpp  sensor_base.h
testing/: Makefile  actuator_test.cpp  drive_20cm.cpp  follow_line.cpp  init_test  init_test.cpp  project.geany  sensor_simulation  sensor_simulation.cpp  test_main.cpp  time_test  time_test.arm  time_test.cpp
